Initial commit with structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
-.gradle
-/build/
+# Build files
+build/
+/app/build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-# Ignore Gradle GUI config
-gradle-app.setting
+# Gradle files
+.gradle
+
+# Mongo execution files
+mongodb/
+mongo.log
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
@@ -10,5 +17,43 @@ gradle-app.setting
 # Cache of project
 .gradletasknamecache
 
+# Ignore Gradle GUI config
+gradle-app.setting
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### VS Code ###
+.vscode/
+
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
+# Macos files
+**/.DS_Store
+
