--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -20,7 +20,9 @@ jobs:
       uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
       with:
         arguments: build --info
-        
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     #steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
