--- a/.github/workflows/gradle-regenerate.yml
+++ b/.github/workflows/gradle-regenerate.yml
@@ -17,3 +17,5 @@ jobs:
       uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
       with:
         arguments: regenerate build --info
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
