Add GitHub Packages repository

--- a/.github/workflows/gradle-regenerate.yml
+++ b/.github/workflows/gradle-regenerate.yml
@@ -16,6 +16,6 @@ jobs:
     - name: Build with Gradle
       uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
       with:
-        arguments: regenerate build --info -Porg.gradle.workers.max=1 -Porg.gradle.daemon=false -Porg.gradle.parallel=false
+        arguments: regenerate build --info
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
